Remove modules from -imagemp that are already provided by other means